--- a/app/package.json
+++ b/app/package.json
@@ -62,6 +62,7 @@
     "@types/bunyan": "^1.8.4",
     "@types/color": "^3.0.0",
     "@types/cookie-parser": "^1.4.1",
+    "@types/csurf": "^1.9.35",
     "@types/express": "^4.11.1",
     "@types/google.analytics": "^0.0.39",
     "@types/helmet": "^0.0.37",
@@ -130,6 +131,7 @@
     "color": "^3.0.0",
     "consent-string": "^1.5.1",
     "cookie-parser": "^1.4.4",
+    "csurf": "^1.10.0",
     "express": "^4.16.3",
     "formik": "^1.5.8",
     "helmet": "^3.21.1",
